# TemplateGRPCJavaRustGoPython

./: INIT.md  README.md  go-run.sh  go.work  java-run.sh  python-run.sh  rust-run.sh
go/: go.mod
go/client/: client.go
go/proto/: hellogoworld.proto
go/server/: server.go
java/template_grpc/: pom.xml
java/template_grpc/src/main/java/com/giacomolorenzo/rossi/template_grpc/client/: JavaGrpcClient.java
java/template_grpc/src/main/java/com/giacomolorenzo/rossi/template_grpc/server/: JavaGrpcServer.java
java/template_grpc/src/main/proto/: helloworld.proto
java/template_grpc/src/main/resources/: logback.xml
python/: client.py  helloworld_pb2.py  server.py
python/server/: main.py
rust/: Cargo.toml  build.rs
rust/client/src/: main.rs
rust/proto/: hello.proto  helloworld.proto
rust/server/src/: main.rs
rust/src/: client.rs  lib.rs  server.rs
