[package]
name = "rust_grpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8.1"
async-trait = "0.1.57"
prost = "0.11.0"

[build-dependencies]
tonic-build = "0.8.0"

# In questo progetto creo una libreria e due programmi eseguibili (binaries)
[lib]
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"
